<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button3" />


    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/button_mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button6" />


    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/button_result"
        app:layout_constraintEnd_toStartOf="@+id/button_mult"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button_mult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/button_del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button9" />


    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/buttonAC"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/point"
        app:layout_constraintBottom_toTopOf="@+id/buttonAC"
        app:layout_constraintEnd_toStartOf="@+id/button_result"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        app:layout_constraintBottom_toTopOf="@+id/button_plus_minus"
        app:layout_constraintEnd_toStartOf="@+id/button_del"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button_point" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button_del"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/button_procent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button_result" />


    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/buttonAC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_plus_minus"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button_plus_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/plus_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_procent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/buttonAC" />

    <Button
        app:cornerRadius="@dimen/button_radius"
        android:id="@+id/button_procent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button_plus_minus" />


</androidx.constraintlayout.widget.ConstraintLayout>