<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintHorizontal_chainStyle="packed"/>
    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button2" />
    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintTop_toBottomOf="@id/button3"/>
    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_plus"/>
    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintHorizontal_chainStyle="packed"/>
    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/point"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/button5"/>
    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/equal"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintTop_toBottomOf="@id/button6"/>
    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/divide"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_minus"/>
    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/AC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/point"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintHorizontal_chainStyle="packed"/>
    <Button
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/AC"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/equal"
        app:layout_constraintTop_toBottomOf="@id/button8"/>
    <Button
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/plus_minus"
        app:layout_constraintStart_toEndOf="@id/point"
        app:layout_constraintEnd_toStartOf="@id/divide"
        app:layout_constraintTop_toBottomOf="@id/button9"/>
    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@id/percent"
        app:layout_constraintStart_toEndOf="@id/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_multiply"
    <Button
        android:id="@+id/AC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ac"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/plus_minus"
        app:layout_constraintTop_toBottomOf="@id/button0"
        app:layout_constraintHorizontal_chainStyle="packed" />
    <Button
        android:id="@+id/plus_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_minus"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/AC"
        app:layout_constraintEnd_toStartOf="@id/percent"
        app:layout_constraintTop_toBottomOf="@id/equal"/>
    <Button
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/plus_minus"
        app:layout_constraintEnd_toEndOf="@id/divide"
        app:layout_constraintTop_toBottomOf="@id/divide"/>
</androidx.constraintlayout.widget.ConstraintLayout>